--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Gustavo Fraga</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile mx-auto mb-2 rounded-circle" src="img/profile.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -186,9 +186,6 @@
             </li>
             <li class="list-inline-item" title="Git">
               <i class="devicon devicon-git-plain"></i>
-            </li>
-            <li class="list-inline-item" title="Docker">
-              <i class="devicon devicon-docker-plain"></i>
             </li>
           </ul>
 
