--- a/index.html
+++ b/index.html
@@ -1,245 +1,242 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-  <head>
+	<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Gustavo Fraga · Web Developer">
-    <meta name="author" content="Gustavo Fraga">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+		<meta name="description" content="Gustavo Fraga · Web Developer">
+		<meta name="author" content="Gustavo Fraga">
+		<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-    <title>Gustavo Fraga · Web Developer</title>
+		<title>Gustavo Fraga · Web Developer</title>
 
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/devicon.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+		<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+		<link href="vendor/devicons/devicon.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 
-  </head>
+	</head>
 
-  <body id="page-top">
+	<body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Gustavo Fraga</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile mx-auto mb-2 rounded-circle" src="img/profile.jpg" alt="">
-        </span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experiência</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projetos</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#experience">Experiência</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#education">Educação</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#projects">Projetos</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-    <div class="container-fluid p-0">
+		<div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0 m-center">Gustavo
-            <span class="text-primary">Fraga</span>
-          </h1>
-          <div class="subheading mb-5 m-center m-top-margin">Porto Alegre · Brasil | (51) 99828-9364 ·
-            <a href="mailto:gustavo@lafraga.me">gustavo@lafraga.me</a>
-          </div>
-          <p class="mb-5">Gosto pelo aprendizado, determinação e possibilidades de estar envolvido com projetos focados em soluções eficientes definem meu perfil profissional.</p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="https://br.linkedin.com/in/lafraga93" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/gustavoFraga/" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
+			<section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+				<div class="my-auto">
+					<h1 class="mb-0 m-center">Gustavo
+						<span class="text-primary">Fraga</span>
+					</h1>
+					<div class="subheading mb-5 m-center m-top-margin">Porto Alegre · Brasil | (51) 99828-9364 <span class="desktop">·</span>
+						<a href="mailto:gustavo@lafraga.me">gustavo@lafraga.me</a>
+					</div>
+					<p class="mb-5 desktop">Gosto pelo aprendizado, determinação e possibilidades de estar envolvido com projetos focados em soluções eficientes definem meu perfil profissional.</p>
+					<ul class="list-inline list-social-icons mb-0">
+						<li class="list-inline-item">
+							<a href="https://br.linkedin.com/in/lafraga93" target="_blank">
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+								</span>
+							</a>
+						</li>
+						<li class="list-inline-item">
+							<a href="https://github.com/gustavoFraga/" target="_blank">
+								<span class="fa-stack fa-lg">
+									<i class="fa fa-circle fa-stack-2x"></i>
+									<i class="fa fa-github fa-stack-1x fa-inverse"></i>
+								</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
+			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+				<div class="my-auto">
 
-          <h2 class="mb-5">Últimas Experiências</h2>
+					<h2 class="mb-5">Últimas Experiências</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">J&O Software</div>
-              <p>Manutenção e implementação de features em sistemas de gestão de grande escala com a utilização do framework CodeIgniter e integração Oracle</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Março 2018 · Presente</span>
-            </div>
-          </div>
+					<div class="resume-item d-flex flex-column flex-md-row mb-5">
+						<div class="resume-content mr-auto">
+							<h3 class="mb-0">Web Developer</h3>
+							<div class="subheading mb-3">J&O Software</div>
+							<p>Manutenção e implementação de features em sistemas de gestão de grande escala com a utilização do framework CodeIgniter e integração Oracle</p>
+						</div>
+						<div class="resume-date text-md-right">
+							<span class="text-primary">Março 2018 · Presente</span>
+						</div>
+					</div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">WebDB Solution</div>
-              <p>Criação de portais e websites dinâmicos, desenvolvimento de sistemas de gestão interna, lojas virtuais e aplicativos para dispositivos móveis</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">April 2017 · Dezembro 2017</span>
-            </div>
-          </div>
+					<div class="resume-item d-flex flex-column flex-md-row mb-5">
+						<div class="resume-content mr-auto">
+							<h3 class="mb-0">Web Developer</h3>
+							<div class="subheading mb-3">WebDB Solution</div>
+							<p>Criação de portais e websites dinâmicos, desenvolvimento de sistemas de gestão interna, lojas virtuais e aplicativos para dispositivos móveis</p>
+						</div>
+						<div class="resume-date text-md-right">
+							<span class="text-primary">April 2017 · Dezembro 2017</span>
+						</div>
+					</div>
 
-        </div>
-      </section>
+				</div>
+			</section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
+			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+				<div class="my-auto">
 
-          <h2 class="mb-5">Educação</h2>
+					<h2 class="mb-5">Educação</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
-              <div class="subheading mb-3">Desenvolvimento de Sistemas</div>
-              <div>
-                <p>Período: 2014 · 2017</p>
-              </div>
-            </div>
-          </div>
+					<div class="resume-item d-flex flex-column flex-md-row">
+						<div class="resume-content">
+							<h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
+							<div class="subheading mb-3">Desenvolvimento de Sistemas</div>
+							<div>
+								<p>Período: 2014 · 2017</p>
+							</div>
+						</div>
+					</div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">QI ESCOLAS E FACULDADES</h3>
-              <div class="subheading mb-3">Técnico em Contabilidade</div>
-              <div>
-                <p>Período: 2012 · 2013</p>
-              </div>
-            </div>
-          </div>
+					<div class="resume-item d-flex flex-column flex-md-row">
+						<div class="resume-content">
+							<h3 class="mb-0">QI ESCOLAS E FACULDADES</h3>
+							<div class="subheading mb-3">Técnico em Contabilidade</div>
+							<div>
+								<p>Período: 2012 · 2013</p>
+							</div>
+						</div>
+					</div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">ESCOLA GENTIL VIEGAS CARDOSO</h3>
-              <div class="subheading mb-3">Técnico em Gestão Empresarial</div>
-              <div>
-                <p>Período: 2009 · 2010</p>
-              </div>
-            </div>
-          </div>
+					<div class="resume-item d-flex flex-column flex-md-row">
+						<div class="resume-content">
+							<h3 class="mb-0">ESCOLA GENTIL VIEGAS CARDOSO</h3>
+							<div class="subheading mb-3">Técnico em Gestão Empresarial</div>
+							<div>
+								<p>Período: 2009 · 2010</p>
+							</div>
+						</div>
+					</div>
 
-        </div>
-      </section>
+				</div>
+			</section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
+			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+				<div class="my-auto">
 
-          <h2 class="mb-5">Skills</h2>
+					<h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programação & Ferramentas</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item" title="PHP">
-              <i class="devicon devicon-php-plain"></i>
-            </li>
-            <li class="list-inline-item" title="CodeIgniter">
-              <i class="devicon devicon-codeigniter-plain"></i>
-            </li>
-            <li class="list-inline-item" title="MySQL">
-              <i class="devicon devicon-mysql-plain"></i>
-            </li>
-            <li class="list-inline-item" title="HTML5">
-              <i class="devicon devicon-html5-plain"></i>
-            </li>
-            <li class="list-inline-item" title="CSS3">
-              <i class="devicon devicon-css3-plain"></i>
-            </li>
-            <li class="list-inline-item" title="JavaScript">
-              <i class="devicon devicon-javascript-plain"></i>
-            </li>
-            <li class="list-inline-item" title="jQuery">
-              <i class="devicon devicon-jquery-plain"></i>
-            </li>
-            <li class="list-inline-item" title="Git">
-              <i class="devicon devicon-git-plain"></i>
-            </li>
-          </ul>
+					<div class="subheading mb-3">Programação & Ferramentas</div>
+					<ul class="list-inline list-icons">
+						<li class="list-inline-item" title="PHP">
+							<i class="devicon devicon-php-plain"></i>
+						</li>
+						<li class="list-inline-item" title="CodeIgniter">
+							<i class="devicon devicon-codeigniter-plain"></i>
+						</li>
+						<li class="list-inline-item" title="MySQL">
+							<i class="devicon devicon-mysql-plain"></i>
+						</li>
+						<li class="list-inline-item" title="HTML5">
+							<i class="devicon devicon-html5-plain"></i>
+						</li>
+						<li class="list-inline-item" title="CSS3">
+							<i class="devicon devicon-css3-plain"></i>
+						</li>
+						<li class="list-inline-item" title="SASS">
+							<i class="devicon devicon-sass-plain"></i>
+						</li>
+						<li class="list-inline-item" title="JavaScript">
+							<i class="devicon devicon-javascript-plain"></i>
+						</li>
+						<li class="list-inline-item" title="jQuery">
+							<i class="devicon devicon-jquery-plain"></i>
+						</li>
+						<li class="list-inline-item" title="GruntJS">
+							<i class="devicon devicon-grunt-plain"></i>
+						</li>
+						<li class="list-inline-item" title="Git">
+							<i class="devicon devicon-git-plain"></i>
+						</li>
+					</ul>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li class="m-li-margin-bottom">
-              <i class="fa-li fa fa-check"></i>Sistemas web modernos com PHP OO e MVC
-            </li>
-            <li class="m-li-margin-bottom">
-              <i class="fa-li fa fa-check"></i>Integração entre sistemas / Web Services
-            </li>
-            <li class="m-li-margin-bottom">
-              <i class="fa-li fa fa-check"></i>Desenvolvimento de aplicativos híbridos para dispositivos móveis
-            </li>
-          </ul>
+					<div class="subheading mb-3">Workflow</div>
+					<ul class="fa-ul mb-0">
+						<li class="m-li-margin-bottom">
+							<i class="fa-li fa fa-check desktop"></i>Sistemas web modernos com PHP OO e MVC
+						</li>
+						<li class="m-li-margin-bottom">
+							<i class="fa-li fa fa-check desktop"></i>Integração entre sistemas / Web Services
+						</li>
+						<li class="m-li-margin-bottom">
+							<i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicativos híbridos para dispositivos móveis
+						</li>
+					</ul>
 
-        </div>
-      </section>
+				</div>
+			</section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interesses</h2>
-          <p class="mb-0">Estou aberto a propostas de trabalho relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos.</p>
-        </div>
-      </section>
+			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+				<div class="my-auto">
+					<h2 class="mb-5">Interesses</h2>
+					<p class="mb-0">Estou aberto a propostas de trabalho relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos.</p>
+				</div>
+			</section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-        <div class="my-auto">
+			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+				<div class="my-auto">
 
-          <h2 class="mb-5">Projetos</h2>
+					<h2 class="mb-5">Projetos</h2>
 
-          <div class="subheading mb-3">Trabalhos em que estou envolvido</div>
-          <ul class="fa-ul mb-0">
-            <li class="m-li-margin-bottom">
-              <i class="fa-li fa fa-chevron-right"></i>Blog pessoal com materias de apoio e dicas sobre desenvolvimento web
-              &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link m-hidden"></i></a>
-            </li>
-            <li class="m-li-margin-bottom">
-              <i class="fa-li fa fa-chevron-right"></i>Projeto Comanda Mobile (Em Desenvolvimento)
-              &nbsp;<a href="http://comandamobile.lafraga.me" target="_blank"><i class="fa fa-link m-hidden"></i></a>
-            </li>
-          </ul>
+					<div class="subheading mb-3">Trabalhos em que estou envolvido</div>
+					<ul class="fa-ul mb-0">
+						<li class="m-li-margin-bottom">
+							<i class="fa-li fa fa-chevron-right desktop"></i>Blog pessoal com materias de apoio e dicas sobre desenvolvimento web
+							&nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link m-hidden"></i></a>
+						</li>
+					</ul>
 
-        </div>
-      </section>
+				</div>
+			</section>
 
-    </div>
+		</div>
 
-    <a href="#page-top" id="up" class="js-scroll-trigger"><i class="fa fa-chevron-up fa-2x" style="opacity: 0.3;"></i></a>
+		<a href="#page-top" id="up" class="js-scroll-trigger"><i class="fa fa-chevron-up fa-2x" style="opacity: 0.3;"></i></a>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="js/script.js"></script>
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		<script src="js/script.js"></script>
 
-  </body>
+	</body>
 </html>
