--- a/index.html
+++ b/index.html
@@ -90,31 +90,31 @@
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
-                            <h3 class="mb-0">Web Developer</h3>
+                            <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">Smart Support</div>
                         </div>
                         <div class="resume-date text-md-right">
-                            <span class="text-primary">Março 2018 · Presente</span>
+                            <span class="text-primary">Janeiro 2019 · Presente</span>
                         </div>
                     </div>
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
-                            <h3 class="mb-0">Web Developer</h3>
+                            <h3 class="mb-0">Junior Web Developer</h3>
                             <div class="subheading mb-3">J&O Software</div>
                         </div>
                         <div class="resume-date text-md-right">
-                            <span class="text-primary">Março 2018 · Presente</span>
+                            <span class="text-primary">Março 2018 · Janeiro 2019</span>
                         </div>
                     </div>
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
-                            <h3 class="mb-0">Web Developer</h3>
+                            <h3 class="mb-0">Web Developer Trainee</h3>
                             <div class="subheading mb-3">WebDB Solution</div>
                         </div>
                         <div class="resume-date text-md-right">
-                            <span class="text-primary">April 2017 · Dezembro 2017</span>
+                            <span class="text-primary">Abril 2017 · Dezembro 2017</span>
                         </div>
                     </div>
 
@@ -132,26 +132,6 @@
                             <div class="subheading mb-3">Desenvolvimento de Sistemas</div>
                             <div>
                                 <p>Período: 2014 · 2017</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="resume-item d-flex flex-column flex-md-row">
-                        <div class="resume-content">
-                            <h3 class="mb-0">QI ESCOLAS E FACULDADES</h3>
-                            <div class="subheading mb-3">Técnico em Contabilidade</div>
-                            <div>
-                                <p>Período: 2012 · 2013</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="resume-item d-flex flex-column flex-md-row">
-                        <div class="resume-content">
-                            <h3 class="mb-0">ESCOLA GENTIL VIEGAS CARDOSO</h3>
-                            <div class="subheading mb-3">Técnico em Gestão Empresarial</div>
-                            <div>
-                                <p>Período: 2009 · 2010</p>
                             </div>
                         </div>
                     </div>
@@ -251,7 +231,7 @@
                     <div class="subheading mb-3">Trabalhos em que estou envolvido</div>
                     <ul class="fa-ul mb-0">
                         <li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-chevron-right desktop"></i>Blog pessoal com materias de apoio e dicas sobre desenvolvimento web
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Blog com materias de apoio e dicas sobre desenvolvimento web
                             &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link m-hidden"></i></a>
                         </li>
                     </ul>
