--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
-                            <h3 class="mb-0">Junior Web Developer</h3>
+                            <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">J&O Software</div>
                         </div>
                         <div class="resume-date text-md-right">
@@ -131,7 +131,7 @@
                             <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
                             <div class="subheading mb-3">Desenvolvimento de Sistemas</div>
                             <div>
-                                <p>Período: 2014 · 2017</p>
+                                <p>2014 · 2017</p>
                             </div>
                         </div>
                     </div>
