link from my projects

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <ul class="fa-ul mb-0">
                         <li class="m-li-margin-bottom">
                             <i class="fa-li fa fa-chevron-right desktop"></i>Blog com materias de apoio e dicas sobre desenvolvimento web
-                            &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link m-hidden"></i></a>
+                            &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
                     </ul>
 
