feat: info update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="subheading mb-5 m-center m-top-margin">Porto Alegre · Brasil | (51) 9 8903.3487 <span class="desktop">·</span>
                         <a href="mailto:gustavo@lafraga.me">gustavo@lafraga.me</a>
                     </div>
-                    <p class="mb-5 desktop">Gosto pelo aprendizado, determinação e possibilidades de estar envolvido com projetos focados em soluções eficientes definem meu perfil profissional.</p>
+                    <p class="mb-5 desktop">Gosto pelo aprendizado, determinação e possibilidades de estar envolvido com projetos focados em soluções eficientes definem meu perfil profissional</p>
                     <ul class="list-inline list-social-icons mb-0">
                         <li class="list-inline-item">
                             <a href="https://br.linkedin.com/in/lafraga93" target="_blank">
@@ -72,10 +72,18 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://github.com/gustavoFraga/" target="_blank">
+                            <a href="https://github.com/lafraga93/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://blog.lafraga.me/" target="_blank">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
@@ -91,10 +99,22 @@
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
                             <h3 class="mb-0">Software Developer</h3>
-                            <div class="subheading mb-3">Smart Support</div>
+                            <div class="subheading mb-3">Incoders Tecnologia</div>
+                            <p>Manutenção em projetos do ramo imobiliário, análise e desenvolvimento de soluções altamente escaláveis em ambientes de alta disponibilidade para o cliente principal</p>
                         </div>
                         <div class="resume-date text-md-right">
-                            <span class="text-primary">Janeiro 2019 · Presente</span>
+                            <span class="text-primary">Janeiro 2020 · Presente</span>
+                        </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content mr-auto">
+                            <h3 class="mb-0">Software Developer</h3>
+                            <div class="subheading mb-3">Smart Support</div>
+                            <p>Manutenção em projetos legados de diversos nichos de mercado, análise e desenvolvimento de novos projetos com a utilização do framework Laravel</p>
+                        </div>
+                        <div class="resume-date text-md-right">
+                            <span class="text-primary">Janeiro 2019 · Janeiro 2020</span>
                         </div>
                     </div>
 
@@ -102,6 +122,7 @@
                         <div class="resume-content mr-auto">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">J&O Software</div>
+                            <p>Manutenção e implementação de features no principal produto oferecido (software de gestão de grande escala) com a utilização do framework CodeIgniter e integração Oracle</p>
                         </div>
                         <div class="resume-date text-md-right">
                             <span class="text-primary">Março 2018 · Janeiro 2019</span>
@@ -112,6 +133,7 @@
                         <div class="resume-content mr-auto">
                             <h3 class="mb-0">Web Developer (Trainee)</h3>
                             <div class="subheading mb-3">WebDB Solution</div>
+                            <p>Criação e manutenção de portais e websites dinâmicos e desenvolvimento de sistemas de gestão interna, lojas virtuais e aplicativos para dispositivos móveis</p>
                         </div>
                         <div class="resume-date text-md-right">
                             <span class="text-primary">Abril 2017 · Dezembro 2017</span>
@@ -126,7 +148,17 @@
 
                     <h2 class="mb-5">Educação</h2>
 
-                    <div class="resume-item d-flex flex-column flex-md-row">
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content">
+                            <h3 class="mb-0">UNISINOS SÃO LEOPOLDO</h3>
+                            <div class="subheading mb-3">Especialização em Engenharia de Software</div>
+                            <div>
+                                <p>2020 · Presente - (conclusão em 2021)</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
                             <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
                             <div class="subheading mb-3">Desenvolvimento de Sistemas</div>
@@ -143,72 +175,45 @@
                 <div class="my-auto">
 
                     <h2 class="mb-5">Skills</h2>
+                    
+                    <div class="mb-5">
+                        <div class="subheading mb-3">Programação & Ferramentas</div>
+                        <ul class="list-inline list-icons">
+                            <li class="list-inline-item" title="MySQL">
+                                <i class="devicon devicon-mysql-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="PHP">
+                                <i class="devicon devicon-php-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="JavaScript">
+                                <i class="devicon devicon-javascript-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="CSS3">
+                                <i class="devicon devicon-css3-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="HTML5">
+                                <i class="devicon devicon-html5-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="Git">
+                                <i class="devicon devicon-git-plain"></i>
+                            </li>
+                            <li class="list-inline-item" title="Docker">
+                                <i class="devicon devicon-docker-plain"></i>
+                            </li>
+                        </ul>
+                    </div>
 
-                    <div class="subheading mb-3">Programação & Ferramentas</div>
-                    <ul class="list-inline list-icons">
-                        <li class="list-inline-item" title="MySQL">
-                            <i class="devicon devicon-mysql-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="PHP">
-                            <i class="devicon devicon-php-plain"></i>
-                        </li>
-                        <!--
-                        <li class="list-inline-item" title="CodeIgniter">
-                            <i class="devicon devicon-codeigniter-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="Laravel Framework">
-                            <i class="devicon devicon-laravel-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="Symfony">
-                            <i class="devicon devicon-symfony-original"></i>
-                        </li>
-                        <li class="list-inline-item" title="Doctrine ORM">
-                            <i class="devicon devicon-doctrine-plain"></i>
-                        </li>
-                    	-->
-                        <li class="list-inline-item" title="JavaScript">
-                            <i class="devicon devicon-javascript-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="jQuery">
-                            <i class="devicon devicon-jquery-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="CSS3">
-                            <i class="devicon devicon-css3-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="HTML5">
-                            <i class="devicon devicon-html5-plain"></i>
-                        </li>
-                        <!--
-                        <li class="list-inline-item" title="SASS">
-                            <i class="devicon devicon-sass-original"></i>
-                        </li>
-                        <li class="list-inline-item" title="Bootstrap">
-                            <i class="devicon devicon-bootstrap-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="Servidores Apache">
-                            <i class="devicon devicon-apache-plain"></i>
-                        </li>
-                        <li class="list-inline-item" title="Servidores Nginx">
-                            <i class="devicon devicon-nginx-original"></i>
-                        </li>
-                        <li class="list-inline-item" title="Docker">
-                            <i class="devicon devicon-docker-plain"></i>
-                        </li>
-                    	-->
-                        <li class="list-inline-item" title="Git">
-                            <i class="devicon devicon-git-plain"></i>
-                        </li>
-                    </ul>
-
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicações web modernas baseadas em boas práticas e padrões de projeto com PHP
-                        </li>
-                        <li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas / Web Services
-                        </li>
-                    </ul>
+                    <div class="mb-5">
+                        <div class="subheading mb-3">Workflow</div>
+                        <ul class="fa-ul mb-0">
+                            <li class="m-li-margin-bottom">
+                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicações web modernas baseadas em boas práticas e padrões de projeto com PHP e outras tecnologias
+                            </li>
+                            <li class="m-li-margin-bottom">
+                                <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas utilizando webservices e/ou REST APIs
+                            </li>
+                        </ul>
+                    </div>
 
                 </div>
             </section>
@@ -216,7 +221,21 @@
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
                 <div class="my-auto">
                     <h2 class="mb-5">Interesses</h2>
-                    <p class="mb-0">Estou aberto a propostas de trabalho relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos.</p>
+                    <div class="mb-5">
+                        <div class="subheading mb-3">ElePHPants</div>
+                        <p class="mb-0">Sim, sou um colecionador de ElePHPants!</p>
+                        <p></p>
+                        <p>ElePHPants são pelúcias do mascote do PHP e <a href="https://elephpant.me/herd/lafraga93/" target="_blank">este</a> é meu perfil no <a href="https://elephpant.me/" target="_blank">elephpant.me</a>, site que concentra colecionadores do mundo inteiro!</p>
+                    </div>
+                    <div style="clear: both;"></div>
+                    <div class="mb-5">
+                        <div class="subheading mb-3">Comunidades & Eventos</div>
+                        <p class="mb-0">Sou membro e colaborador do PHPRS e escrevo artigos destinados à comunidade de desenvolvimento PHP para o portal <a href="https://imasters.com.br/perfil/gustavofraga/" target="_blank">iMasters</a> e <a href="https://blog.lafraga.me/" target="_blank">blog pessoal</a></p>
+                    </div> 
+                    <div class="mb-5">
+                        <div class="subheading mb-3">Projetos</div>
+                        <p class="mb-0">Estou aberto a oportunidades de trabalho relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos</p>
+                    </div>
                 </div>
             </section>
 
@@ -230,6 +249,14 @@
                         <li class="m-li-margin-bottom">
                             <i class="fa-li fa fa-chevron-right desktop"></i>Blog com materias de apoio e dicas sobre desenvolvimento web
                             &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link"></i></a>
+                        </li>
+                        <li class="m-li-margin-bottom">
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Espaço no portal iMasters onde também publico conteúdo
+                            &nbsp;<a href="https://imasters.com.br/perfil/gustavofraga/" target="_blank"><i class="fa fa-link"></i></a>
+                        </li>
+                        <li class="m-li-margin-bottom">
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Grupo de Desenvolvedores PHP do estado do Rio Grande do Sul - PHPRS
+                            &nbsp;<a href="https://www.phprs.com.br/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
                     </ul>
 
