feat: info update

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </div> 
                     <div class="mb-5">
                         <div class="subheading mb-3">Projetos</div>
-                        <p class="mb-0">Estou aberto a oportunidades de trabalho relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos</p>
+                        <p class="mb-0">Estou aberto a oportunidades relacionadas à soluções inovadoras no segmento de desenvolvimento de sistemas para web, aplicativos móveis e correlatos</p>
                     </div>
                 </div>
             </section>
