feat: info update

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-        <meta name="description" content="Gustavo Fraga · Web Developer">
+        <meta name="description" content="Gustavo Fraga · Software Developer">
         <meta name="author" content="Gustavo Fraga">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <title>Gustavo Fraga · Web Developer</title>
+        <title>Gustavo Fraga · Software Developer</title>
 
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
