--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-        <meta name="description" content="Gustavo Fraga · Software Developer">
+        <meta name="description" content="Gustavo Fraga, Software Developer, PHP">
         <meta name="author" content="Gustavo Fraga">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
