fix: adjust info

--- a/index.html
+++ b/index.html
@@ -148,15 +148,17 @@
 
                     <h2 class="mb-5">Educação</h2>
 
+                    <!--
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
-                            <h3 class="mb-0">UNISINOS SÃO LEOPOLDO</h3>
+                            <h3 class="mb-0">FACULDADE CLARETIANO</h3>
                             <div class="subheading mb-3">Especialização em Engenharia de Software</div>
                             <div>
-                                <p>2020 · Presente - (conclusão em 2021)</p>
+                                <p>2020 · Presente</p>
                             </div>
                         </div>
                     </div>
+                    -->
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
@@ -207,10 +209,16 @@
                         <div class="subheading mb-3">Workflow</div>
                         <ul class="fa-ul mb-0">
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicações web modernas baseadas em boas práticas e padrões de projeto com PHP e outras tecnologias
+                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicativos web modernos baseados nas melhores práticas através de diversas tecnologias
                             </li>
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas utilizando webservices e/ou REST APIs
+                                <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas
+                            </li>
+                            <li class="m-li-margin-bottom">
+                                <i class="fa-li fa fa-check desktop"></i>Suporte e manutenção para sistemas legados
+                            </li>
+                            <li class="m-li-margin-bottom">
+                                <i class="fa-li fa fa-check desktop"></i>Consultoria para equipes nos processos de concepção, modelagem e desenvolvimento de soluções
                             </li>
                         </ul>
                     </div>
