--- a/index.html
+++ b/index.html
@@ -162,8 +162,18 @@
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
+                            <h3 class="mb-0">CLARETIANO</h3>
+                            <div class="subheading mb-3">Especialização em Engenharia de Software</div>
+                            <div>
+                                <p>2020 · Presente</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content">
                             <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
-                            <div class="subheading mb-3">Desenvolvimento de Sistemas</div>
+                            <div class="subheading mb-3">Graduação em Análise e Desenvolvimento de Sistemas</div>
                             <div>
                                 <p>2014 · 2017</p>
                             </div>
