--- a/index.html
+++ b/index.html
@@ -148,28 +148,6 @@
 
                     <h2 class="mb-5">Educação</h2>
 
-                    <!--
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content">
-                            <h3 class="mb-0">FACULDADE CLARETIANO</h3>
-                            <div class="subheading mb-3">Especialização em Engenharia de Software</div>
-                            <div>
-                                <p>2020 · Presente</p>
-                            </div>
-                        </div>
-                    </div>
-                    -->
-
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content">
-                            <h3 class="mb-0">CLARETIANO</h3>
-                            <div class="subheading mb-3">Especialização em Engenharia de Software</div>
-                            <div>
-                                <p>2020 · Presente</p>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
                             <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
@@ -265,7 +243,7 @@
                     <div class="subheading mb-3">Trabalhos em que estou envolvido</div>
                     <ul class="fa-ul mb-0">
                         <li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-chevron-right desktop"></i>Blog com materias de apoio e dicas sobre desenvolvimento web
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Blog com materias de apoio e dicas sobre PHP e desenvolvimento web
                             &nbsp;<a href="http://blog.lafraga.me/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
                         <li class="m-li-margin-bottom">
@@ -273,7 +251,15 @@
                             &nbsp;<a href="https://imasters.com.br/perfil/gustavofraga/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
                         <li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-chevron-right desktop"></i>Grupo de Desenvolvedores PHP do estado do Rio Grande do Sul - PHPRS
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Projeto "Codando PHP" com material gratuito em video sobre PHP
+                            &nbsp;<a href="https://codandophp.com.br/" target="_blank"><i class="fa fa-link"></i></a>
+                        </li>
+                        <li class="m-li-margin-bottom">
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Criador do app Triveg POA
+                            &nbsp;<a href="https://triveg.poa.br/" target="_blank"><i class="fa fa-link"></i></a>
+                        </li>
+                        <li class="m-li-margin-bottom">
+                            <i class="fa-li fa fa-chevron-right desktop"></i>Membro ativo da comunidade através do PHPRS
                             &nbsp;<a href="https://www.phprs.com.br/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
                     </ul>
