--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div style="clear: both;"></div>
                     <div class="mb-5">
                         <div class="subheading mb-3">Comunidades & Eventos</div>
-                        <p class="mb-0">Sou membro e colaborador do PHPRS e escrevo artigos destinados à comunidade de desenvolvimento PHP para o portal <a href="https://imasters.com.br/perfil/gustavofraga/" target="_blank">iMasters</a> e <a href="https://blog.lafraga.me/" target="_blank">blog pessoal</a></p>
+                        <p class="mb-0">Sou membro e colaborador do PHPRS, produzo conteúdos destinados à comunidade de desenvolvimento PHP e participo em eventos como palestrante e coorganizador</p>
                     </div> 
                     <div class="mb-5">
                         <div class="subheading mb-3">Projetos</div>
