--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-        <meta name="description" content="Gustavo Fraga · Web Developer">
+        <meta name="description" content="Gustavo Fraga, Software Developer, PHP">
         <meta name="author" content="Gustavo Fraga">
 
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -15,8 +15,6 @@
     </head>
 
     <style>
-
-        @import url('https://fonts.googleapis.com/css?family=Anton');
 
         body {
             width: 100%;
