--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="resume-content mr-auto">
                             <h3 class="mb-0">Co-founder & CTO</h3>
                             <div class="subheading mb-3">Sistema SIX</div>
-                            <p>Criação e desenvolvimento, coordenação da equipe tecnológica e tomadas de decisão diretamente relacionadas com as entregas, evolução e escala do do produto</p>
+                            <p>Criação e desenvolvimento, coordenação da equipe tecnológica e tomadas de decisão diretamente relacionadas com as entregas, evolução e escala do produto</p>
                         </div>
                         <div class="resume-date text-md-right">
                             <span class="text-primary">Dezembro 2020 · Presente</span>
