--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="mailto:gustavo@lafraga.me">gustavo@lafraga.me</a>
                     </div>
                     <p class="mb-5 desktop">Gosto pelo aprendizado, determinação e possibilidades de estar envolvido com projetos focados em soluções eficientes definem meu perfil profissional</p>
-                    <p class="mb-5 desktop">Olá, me chamo Gustavo Fraga e jáatuei com diversas equipes entregando soluções para vários nichos de mercado. Minha trajetória profissional é baseada em determinação e estar sempre envolvido com entregas de soluções eficientes.</p>
+                    <p class="mb-5 desktop">Olá, me chamo Gustavo Fraga e já atuei com diversas equipes entregando soluções para vários nichos de mercado. Minha trajetória profissional é baseada em determinação e estar sempre envolvido com entregas de soluções eficientes.</p>
                     <p class="mb-5 desktop">Coisas que considero super importantes para desenvolver meu trabalho:</p>
 
                     <div class="mb-5">
@@ -183,6 +183,16 @@
 
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content">
+                            <h3 class="mb-0">CLARETIANO - CENTRO UNIVERSITÁRIO CLARETIANO</h3>
+                            <div class="subheading mb-3">Pós Graduação em Engenharia de Software</div>
+                            <div>
+                                <p>2020 · 2022</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content">
                             <h3 class="mb-0">FADERGS - FACULDADE DE DESENVOLVIMENTO DO RIO GRANDE DO SUL</h3>
                             <div class="subheading mb-3">Graduação em Análise e Desenvolvimento de Sistemas</div>
                             <div>
@@ -197,19 +207,19 @@
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
                 <div class="my-auto">
 
-                    <h2 class="mb-5">Technical Skills</h2>
+                    <h2 class="mb-5">Skills</h2>
 
                     <div class="mb-5">
                         <div class="subheading mb-3">Workflow</div>
                         <ul class="fa-ul mb-0">
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de aplicativos web modernos baseados nas melhores práticas através de diversas tecnologias
+                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de soluções de software modernas baseadas em boas práticas através de diversas tecnologias
                             </li>
                             <li class="m-li-margin-bottom">
                                 <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas
                             </li>
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Suporte e manutenção para sistemas legados
+                                <i class="fa-li fa fa-check desktop"></i>Suporte e manutenção em sistemas legados
                             </li>
                             <li class="m-li-margin-bottom">
                                 <i class="fa-li fa fa-check desktop"></i>Consultoria para equipes nos processos de concepção, modelagem e desenvolvimento de soluções
@@ -250,12 +260,8 @@
                         </li>
                         <li class="m-li-margin-bottom">
                             <i class="fa-li fa fa-chevron-right desktop"></i>Projeto "Codando PHP" com material gratuito em video sobre PHP
-                            &nbsp;<a href="https://codandophp.com.br/" target="_blank"><i class="fa fa-link"></i></a>
+                            &nbsp;<a href="http://www.codandophp.com.br/" target="_blank"><i class="fa fa-link"></i></a>
                         </li>
-                        <!--<li class="m-li-margin-bottom">
-                            <i class="fa-li fa fa-chevron-right desktop"></i>Criador do app Triveg POA
-                            &nbsp;<a href="https://triveg.poa.br/" target="_blank"><i class="fa fa-link"></i></a>
-                        </li>-->
                         <li class="m-li-margin-bottom">
                             <i class="fa-li fa fa-chevron-right desktop"></i>Membro ativo da comunidade através do PHPRS
                             &nbsp;<a href="https://www.phprs.com.br/" target="_blank"><i class="fa fa-link"></i></a>
