--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                     <div class="resume-item d-flex flex-column flex-md-row mb-5">
                         <div class="resume-content mr-auto">
                             <h3 class="mb-0">Software Developer</h3>
+                            <div class="subheading mb-3">PROCERGS</div>
+                            <p>Criação e manutenção evolutiva de soluções tecnológicas para o estado do Rio Grande do Sul e demais clientes utilizando tecnologias como Java, Oracle, PHP, .NET, entre outros</p>
+                        </div>
+                        <div class="resume-date text-md-right">
+                            <span class="text-primary">Junho 2021 · Presente</span>
+                        </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content mr-auto">
+                            <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">Incoders Tecnologia</div>
                             <p>Manutenção em projetos do ramo imobiliário, análise e desenvolvimento de soluções altamente escaláveis em ambientes de alta disponibilidade para o cliente principal</p>
                         </div>
@@ -213,13 +224,13 @@
                         <div class="subheading mb-3">Workflow</div>
                         <ul class="fa-ul mb-0">
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de soluções de software modernas baseadas em boas práticas através de diversas tecnologias
+                                <i class="fa-li fa fa-check desktop"></i>Desenvolvimento de soluções baseado em boas práticas através de diversas tecnologias
                             </li>
                             <li class="m-li-margin-bottom">
                                 <i class="fa-li fa fa-check desktop"></i>Integração entre sistemas
                             </li>
                             <li class="m-li-margin-bottom">
-                                <i class="fa-li fa fa-check desktop"></i>Suporte e manutenção em sistemas legados
+                                <i class="fa-li fa fa-check desktop"></i>Manutenção evolutiva de sistemas legados
                             </li>
                             <li class="m-li-margin-bottom">
                                 <i class="fa-li fa fa-check desktop"></i>Consultoria para equipes nos processos de concepção, modelagem e desenvolvimento de soluções
